<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="Discover"
                android:textColor="@color/dark_late_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/title_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/nunito_black"
                android:text="Laundry Service"
                android:textColor="@color/dark_late_gray"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/title_bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@+id/button_filter"
                android:background="@drawable/bg_search"
                android:gravity="center_vertical">

                <SearchView
                    android:id="@+id/search_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:queryBackground="@android:color/transparent"
                    android:queryHint="Search Services"
                    android:searchIcon="@drawable/ic_search_services"
                    android:theme="@style/SearchView"
                    app:queryBackground="@android:color/transparent" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/button_filter"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_below="@+id/title_bold"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_search"
                android:src="@drawable/ic_filter"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/choose_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunito_black"
                android:text="@string/choose_services"
                android:textColor="@color/dark_late_gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/container_choose_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choose_services"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                tools:ignore="RtlSymmetry">

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/image_1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/bg_item_choose_services"
                        android:padding="10dp"
                        android:src="@drawable/ic_iron"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_1"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/ironing"
                        android:textAlignment="center"
                        android:textColor="@color/dark_late_gray"
                        android:textSize="11sp"
                        tools:ignore="SmallSp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/image_2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/bg_item_choose_services"
                        android:padding="15dp"
                        android:src="@drawable/ic_washing_machine"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_2"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/wash_and_iron"
                        android:textAlignment="center"
                        android:textColor="@color/dark_late_gray"
                        android:textSize="11sp"
                        tools:ignore="SmallSp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/image_3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/bg_item_choose_services"
                        android:padding="15dp"
                        android:src="@drawable/ic_shirt"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_3"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/dry_cleaning"
                        android:textAlignment="center"
                        android:textColor="@color/dark_late_gray"
                        android:textSize="11sp"
                        tools:ignore="SmallSp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/image_4"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/bg_item_choose_services"
                        android:padding="15dp"
                        android:src="@drawable/ic_more"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_4"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/more"
                        android:textAlignment="center"
                        android:textColor="@color/dark_late_gray"
                        android:textSize="11sp"
                        tools:ignore="SmallSp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/container_choose_service"
                android:background="@drawable/bg_half_rounded2">

                <TextView
                    android:id="@+id/recommended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nunito_black"
                    android:text="@string/recommended"
                    android:textColor="@color/dark_late_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_recommended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recommended"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="false"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>